# anzeigen-hauptmeisterinnen-hilfe

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
static/: index.html
